修改爬虫系统代码,测试是否解决"Caused by: java.io.EOFException: SSL peer shut down incorrectly"bug。