@@ -16,8 +16,7 @@ echo '开始启动sell测试项目……'
 cd ./sell/target/
 echo '启动sell测试项目中……'
 kill -9 `pidof java`
-nohup java -Dfile.encoding=UTF8 -Duser.timezone=GMT+08 -Xms256m -Xmx256m -Xmn256m -Xss256k -server -XX:+HeapDumpOnOutOfMemoryError -jar novel_crawler.jar --spring.profiles.active=dev1 -verbose:class &
-nohup java -Dfile.encoding=UTF8 -Duser.timezone=GMT+08 -Xms256m -Xmx256m -Xmn256m -Xss256k -server -XX:+HeapDumpOnOutOfMemoryError -jar novel_crawler.jar --spring.profiles.active=prod1 -verbose:class &
+nohup java -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2 -Dfile.encoding=UTF8 -Duser.timezone=GMT+08 -Xms128m -Xmx256m -Xmn256m -Xss256k -server -XX:+HeapDumpOnOutOfMemoryError -XX:PermSize=64m -XX:MaxPermSize=256m -jar novel_crawler.jar --spring.profiles.active=prod2 -verbose:class &
 echo '结束启动sell测试项目……'
 echo $?
 exit
